スレッドセーフとは タイトル変更

--- a/articles/fbbed3e106d049.md
+++ b/articles/fbbed3e106d049.md
@@ -1,5 +1,5 @@
 ---
-title: "スレッドセーフ"
+title: "スレッドセーフとは"
 emoji: "🧵"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["java", "concurrency", "thread"]
