スレッドセーフとは のタイトルとはじめにの内容を変更

--- a/articles/fbbed3e106d049.md
+++ b/articles/fbbed3e106d049.md
@@ -1,5 +1,5 @@
 ---
-title: "スレッドセーフとは"
+title: "スレッドセーフを考えたことがないあなたへ"
 emoji: "🧵"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["java", "concurrency", "thread"]
@@ -8,17 +8,12 @@ published: true
 
 # はじめに
 
-最初に、本記事は、[Java Concurrency in Practice](https://github.com/AngelSanchezT/books-1/blob/master/concurrency/Java%20Concurrency%20in%20Practice.pdf) を主なソースとして執筆しました。
+スレッドセーフ？いつ使うのそれ？という方に向けて書きました！
+
+不明点や誤りがあれば、ぜひぜひご指摘頂けると助かります。
+
+ちなみに、本記事は、[Java Concurrency in Practice](https://github.com/AngelSanchezT/books-1/blob/master/concurrency/Java%20Concurrency%20in%20Practice.pdf) を主なソースとして執筆しました。
 （この後に登場する例のうちいくつかは本書から引用しています）
-
-これまで並行処理を用いた実装を行ったり、コードを読む機会はありましたが、体系的に理解できているか怪しい状態であったため、学んだことや調査したことを記事にしました。
-
-私と同じように、
-
-- 並行・並列処理を利用する機会はあるが、なんとなく利用している
-- 体系的に学んでみたい
-
-という方に読んでいただければと思います。
 
 # スレッドセーフとは
 
