added message to the article job transfer

--- a/articles/45e4302e34786a.md
+++ b/articles/45e4302e34786a.md
@@ -6,6 +6,10 @@ topics: ["job", "transfer"]
 published: true
 ---
 
+:::message
+本記事は必要とされる能力にフォーカスして感じたことを書いています
+:::
+
 # 経歴
 
 私事だが、2025/03に前職の大手SIerを辞めて、現職の自社開発メガベンチャーへ転職した。
